# ethereum-economic-model

./: .all-contributorsrc  .gitattributes  .gitignore  .pylintrc  ASSUMPTIONS.md  CHANGELOG.md  CONTRIBUTORS.md  GLOSSARY.md  LICENSE  Makefile  README.md  ROADMAP.md  TERMINOLOGY.md  docker-compose.yml  environment_setup.ipynb  jupyter_book.py  pyproject.toml  pytest.ini  requirements.txt  run.py  runtime.txt  scratchpad.ipynb  setup.ipynb
data/: ETH_day.csv  README.md  daily_extracted_mev.json  eth2_deposit_subgraph.py  ether_avg_gas_price.csv  ether_block_rewards.csv  ether_gas_used.csv  ether_price.csv  ether_supply.csv  historical_values.py
docs/: CNAME  ROADMAP.md  _config.yml  _toc.yml  code.rst  hackmd_cadcad_testing_framework.md  hackmd_mathematical_specification.md  index.html  introduction.md  landing-page.md  server.py
experiments/: README.md  __init__.py  base.py  default.py  default_experiment.py  post_processing.py  pre_generate_results.py  run.py  template.py  utils.py
model/: __init__.py  constants.py  parameters.py  processes.py  simulation.py  simulation_configuration.py  state_update_blocks.py  state_variables.py  stochastic_processes.py  system_parameters.py  types.py  utils.py
notebooks/: 0_README.py  1_model_validation.ipynb  2_network_issuance.ipynb  2_validator_environment_yields.ipynb  3_network_yields.ipynb  4_network_yields.ipynb  4_ultra_sound_barrier.ipynb  5_eip1559_transaction_pricing.ipynb  6_individual_validator_performance.ipynb  6_ultra_sound_barrier.ipynb  7_validator_environment_yields.ipynb  7_validator_incentives.ipynb  (+16 more)
(+214 files in other folders)
